--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
 
     <div class="container">
+        <form class="check">
+            <input type="checkbox">
+            <span>
+                <p>S</p>
+            </span>
+        </form>
         <h1>Wisielec</h1>
         <i class="fa-solid fa-1"></i>
 
@@ -21,9 +27,9 @@
                 <img src="img/close (1).png" alt="">
             </div>
         </aside>
-        <form>
-            <input id="word" type="text">
-            <input id="category" type="text">
+        <form class="multi">
+            <input placeholder="Podaj słowo" id="word" type="text">
+            <input placeholder="Kategoria" id="category" type="text">
         </form>
         <div class="btns">
             <div class="start">
