--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </aside>
         <form class="multi">
-            <input placeholder="Podaj słowo" id="word" type="text">
+            <input placeholder="Podaj słowo" id="word" type="password">
             <input placeholder="Kategoria" id="category" type="text">
         </form>
         <div class="btns">
